# chromoxide

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/chromoxide/: Cargo.toml  README.md
crates/chromoxide-image/: Cargo.toml  README.md
crates/chromoxide-image/examples/: basic_pipeline.rs  compare_sampling.rs  saliency_demo.rs
crates/chromoxide-image/src/: assignment.rs  cap.rs  config.rs  diagnostics.rs  error.rs  lib.rs  load.rs  pipeline.rs  prepared.rs  preprocess.rs  saliency.rs  sampling.rs  util.rs
crates/chromoxide-image/tests/: assignment_weights.rs  cap_build.rs  pipeline_end_to_end.rs  preprocess_alpha.rs  preprocess_resize.rs  saliency_global.rs  saliency_local.rs  sampling_farthest.rs  sampling_random.rs  sampling_stratified.rs  sampling_uniform.rs
crates/chromoxide/examples/: neutral_ladder.rs  synthetic_gradient.rs  two_cluster.rs
crates/chromoxide/src/: cap.rs  color.rs  convert.rs  decode.rs  diagnostics.rs  domain.rs  error.rs  lib.rs  objective.rs  problem.rs  seed.rs  solver.rs  support.rs  term.rs  util.rs
crates/chromoxide/src/terms/: chroma_target.rs  contrast.rs  cover.rs  group_quantile.rs  hue_target.rs  lightness_target.rs  mod.rs  pair_delta.rs  pair_distance.rs  (+3 more)
crates/chromoxide/tests/: cap_builder.rs  cap_respect.rs  color_roundtrip.rs  contrast_term.rs  domain_decode.rs  group_quantile.rs  neutral_ladder.rs  saliency_pick.rs  synthetic_two_peak.rs  term_targets.rs
crates/chrox/: Cargo.toml  spec.md
crates/chrox/src/: cli.rs  color.rs  config.rs  filter.rs  lib.rs  main.rs  palette.rs  solve_config.rs  template.rs
(+14 files in other folders)
