[package]
name = "chromoxide"
version = "0.1.0"
edition = "2024"
description = "Constraint-driven palette optimizer"
license = "MIT"
repository = "https://github.com/werdxz/chromoxide"

[dependencies]
argmin = "0.11"
argmin-math = { version = "0.5", default-features = false, features = ["vec"] }
rand = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
approx = "0.5"
