[package]
name = "chrox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
dirs = "6.0"
phf = { version = "0.13.1", features = ["macros"] }
chromoxide = { path = "../chromoxide", features = ["serde"] }
chromoxide-image = { path = "../chromoxide-image" }
